[package]
name = "progetto_malnati"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.0"
eframe = "0.25.0"
egui_extras = "0.25.0"
env_logger = "0.10.1"
image = { version = "0.24.7", features = ["gif"] }
qshot = "0.1.3"
rfd = "0.13.0"
screenshots = "0.8.6"
struct_iterable = "0.1.1"
winit = "0.29.9"
