[package]
name = "progetto_malnati"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.0"
eframe = "0.25.0"
egui_extras = "0.25.0"
env_logger = "0.10.1"
image = { version = "0.24.7", features = ["gif"] }
rfd = "0.13.0"
screenshots = "0.8.6"
winit = "0.29.9"
